--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,54 @@
 fastapi==0.110.0
 uvicorn==0.29.0
 pytest==8.3.5
+annotated-types==0.7.0
+anyio==4.9.0
+asgi-lifespan==2.1.0
+attrs==25.3.0
+Automat==25.4.16
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+constantly==23.10.4
+decorator==5.2.1
+docker==7.1.0
+exceptiongroup==1.3.0
+fastapi==0.110.0
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+iniconfig==2.1.0
+mypy==1.15.0
+mypy_extensions==1.1.0
+outcome==1.3.0.post0
+packaging==25.0
+pluggy==1.6.0
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-tornasync==0.6.0.post2
+pytest-trio==0.8.0
+pytest-twisted==1.14.3
+pywin32==310
+requests==2.32.3
+ruff==0.11.10
+sniffio==1.3.1
+sortedcontainers==2.4.0
+starlette==0.36.3
+tomli==2.2.1
+tornado==6.5
+trio==0.30.0
+Twisted==24.11.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.29.0
+zope.interface==7.2
