--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ pytest-asyncio==0.26.0
 pytest-tornasync==0.6.0.post2
 pytest-trio==0.8.0
 pytest-twisted==1.14.3
-pywin32==310
+#pywin32==310
 requests==2.32.3
 ruff==0.11.10
 sniffio==1.3.1
